<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_UpdateIO" Id="{fc83d877-35ac-09fb-3afd-c09a8be92900}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_UpdateIO : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Update Gauges *)
GVL_BTS_VAC.fb_PP_GPI_1();

GVL_BTS_VAC.fb_PP_GPI_2();

GVL_BTS_VAC.fb_DP_GPI();

GVL_BTS_VAC.fb_BO4_GPI();

GVL_BTS_VAC.fb_BI1_GPI();

GVL_BTS_VAC.fb_PP_GCC(PG := GVL_BTS_VAC.fb_PP_GPI_1.PG);

GVL_BTS_VAC.fb_BO4_GCC(PG := GVL_BTS_VAC.fb_BO4_GPI.PG);

GVL_BTS_VAC.fb_BI1_GCC(PG := GVL_BTS_VAC.fb_BI1_GPI.PG);

GVL_BTS_VAC.fb_DP_GCC(PG := GVL_BTS_VAC.fb_DP_GPI.PG);

(* Update vacuum gauge controllers *)
GVL_BTS_VAC.fb_BO4_VGC(
	i_stUSG := GVL_BTS_VAC.fb_BO4_GCC.IG,
	i_stDSG := GVL_BTS_VAC.fb_DP_GCC.IG,
	i_xEPS_OK := TRUE,
	i_xPMPS_OK := TRUE,
	i_xExt_OK := TRUE,
	io_fbFFHWO := GVL_BTS_VAC.fb_BO4_VGC_FFOut
);

GVL_BTS_VAC.fb_PP_VGC(
	i_stUSG := GVL_BTS_VAC.fb_PP_GCC.IG,
	i_stDSG := GVL_BTS_VAC.fb_DP_GCC.IG,
	i_xDis_DPIlk := FALSE,
	i_xEPS_OK := TRUE,
	i_xPMPS_OK := TRUE,
	i_xExt_OK := GVL_BTS_VAC.fb_PP_PTM.iq_stPTM.eState = E_PumpState.pumpRUNNING,
	io_fbFFHWO := GVL_BTS_VAC.fb_PP_VGC_FFOut
);

GVL_BTS_VAC.fb_PP_VVC(
	i_xExtILK_OK := 
		GVL_BTS_VAC.fb_PP_PTM.iq_stPTM.eState = E_PumpState.pumpSTOPPED
		AND GVL_BTS_VAC.fb_PP_VGC.M_IsClosed()
);

GVL_BTS_VAC.fb_PP_VRC_1(
	i_xExtILK_OK := GVL_BTS_VAC.fb_PP_PMF.q_stPump.eState = E_PumpState.pumpRUNNING
);

GVL_BTS_VAC.fb_PP_VRC_2(
	i_xExtILK_OK := GVL_BTS_VAC.fb_PP_PMF.q_stPump.eState = E_PumpState.pumpRUNNING
);

GVL_BTS_VAC.fb_PP_VRC_3(
	i_xExtILK_OK := GVL_BTS_VAC.fb_PP_PMF.q_stPump.eState = E_PumpState.pumpRUNNING
);

GVL_BTS_VAC.fb_BI1_VGC(
	i_stUSG := GVL_BTS_VAC.fb_BI1_GCC.IG, 
	i_stDSG := GVL_BTS_VAC.fb_DP_GCC.IG,
	i_xDis_DPIlk := FALSE,
	i_xEPS_OK := TRUE,
	i_xPMPS_OK := TRUE,
	i_xExt_OK := TRUE,
	io_fbFFHWO := GVL_BTS_VAC.fb_BI1_VGC_FFOut
);

GVL_BTS_VAC.fb_VP_VVC_1(
	iq_stValve := GVL_BTS_VAC.st_VP_VVC_1,
	i_xExtILK_OK := F_SBVentInterlock()
);

GVL_BTS_VAC.fb_VP_VVC_2(
	iq_stValve := GVL_BTS_VAC.st_VP_VVC_2,
	i_xExtILK_OK := F_SBVentInterlock()
);

(* Update pumps *)
GVL_BTS_VAC.fb_PP_PMF();

GVL_BTS_VAC.fb_PP_PTM(i_xExtRunOk := F_PumpStationTurboPumpInterlock());

GVL_BTS_VAC.fb_BO4_PIP(i_stGauge := GVL_BTS_VAC.fb_BO4_GCC.IG);

GVL_BTS_VAC.fb_PP_PIP(i_stGauge := GVL_BTS_VAC.fb_DP_GCC.IG);

GVL_BTS_VAC.fb_BI1_PIP(i_stGauge := GVL_BTS_VAC.fb_BI1_GCC.IG);]]></ST>
    </Implementation>
    <LineIds Name="F_UpdateIO">
      <LineId Id="8" Count="25" />
      <LineId Id="120" Count="0" />
      <LineId Id="35" Count="8" />
      <LineId Id="121" Count="0" />
      <LineId Id="45" Count="3" />
      <LineId Id="110" Count="1" />
      <LineId Id="50" Count="3" />
      <LineId Id="55" Count="3" />
      <LineId Id="60" Count="3" />
      <LineId Id="65" Count="8" />
      <LineId Id="122" Count="0" />
      <LineId Id="75" Count="4" />
      <LineId Id="81" Count="4" />
      <LineId Id="87" Count="2" />
      <LineId Id="108" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="93" Count="4" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>